--- a/client/src/Screens/Contact/Contact.css
+++ b/client/src/Screens/Contact/Contact.css
@@ -86,4 +86,8 @@ button.btn.btn-secondary:hover{
     div.contact-form form.form .text-primary{
         width: 400px;
     }
+
+    input.text-primary.form-control{
+        width: 75%;
+    }
 }
