--- a/client/src/Screens/Music/Media.css
+++ b/client/src/Screens/Music/Media.css
@@ -1,10 +1,10 @@
 div.media h1{
     text-align: center;
     font-family: raleway;
-    color: rgba(98, 150, 116, 1);
-    background-color: rgba(24, 31, 26, 0.8);
-    border-radius: 30%;
-    box-shadow: 10px 10px 15px 5px rgba(24, 31, 26, 0.8);
+    color: rgb(127, 180, 146);
+    background-color: rgba(24, 31, 26, 0.5);
+    border-radius: 20%;
+    box-shadow: 10px 10px 10px 5px rgba(24, 31, 26, 0.5);
     width: 20%;
     margin: 2% auto;
 }
@@ -20,8 +20,7 @@ div.youtube-map{
 }
 
 div.youtube-clip{
-
-   width: 50%;
+   width: 40%;
    margin: 0.5%;
    background-color: rgba(150, 219, 176, 0.5);
    border-radius: 20%;
@@ -29,4 +28,28 @@ div.youtube-clip{
    display: flex;
    flex-direction: column;
    align-items: center;
+}
+
+
+@media (max-width: 425px) {
+    
+    h1.perf{
+        font-size: 20px;
+        text-align: center;
+        padding-right: 30px;
+    }
+
+    div.youtube-map{
+        height: 90%;
+        width: 100%;
+    }
+
+    div.youtube-clip{
+        width: 60%;
+    }
+
+    div.youtube-clip > h2{
+        font-size: 15px;
+    }
+
 }
